[metadata]
name=elektra
version=0.0.21
author=Molecule
author_email=dev@molecule.io
description=Power block price creation and conversion
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/wearemolecule/elektra
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires= >=3.8
packages=find:
install_requires =
    pandas >= 1.1.3
    numpy >= 1.19.2